
  df now prefers sources towards the root of a device when
  eliding duplicate bind mounted entries.

** Improvements

  dircolors now supports globbing of TERM entries in its database.
  For example "TERM *256color*" is now supported.

  du no longer stats all mount points at startup, only doing so
  upon detection of a directory cycle.
  [issue introduced in coreutils-8.20]


* Noteworthy changes in release 8.24 (2015-07-03) [stable]

** Bug fixes

  dd supports more robust SIGINFO/SIGUSR1 handling for outputting statistics.
  Previously those signals may have inadvertently terminated the process.

  df --local no longer hangs with inaccessible remote mounts.
  [bug introduced in coreutils-8.21]

  du now silently ignores all directory cycles due to bind mounts.
  Previously it would issue a warning and exit with a failure status.
  [bug introduced in coreutils-8.1 and partially fixed in coreutils-8.23]

  chroot again calls chroot(DIR) and chdir("/"), even if DIR is "/".
  This handles separate bind mounted "/" trees, and environments
  depending on the implicit chdir("/").
  [bugs introduced in coreutils-8.23]

  cp no longer issues an incorrect warning about directory hardlinks when a
  source directory is specified multiple times.  Now, consistent with other
  file types, a warning is issued for source directories with duplicate names,
  or with -H the directory is copied again using the symlink name.

  factor avoids writing partial lines, thus supporting parallel operation.
  [the bug dates back to the initial implementation]

  head, od, split, tac, tail, and wc no longer mishandle input from files in
  /proc and /sys file systems that report somewhat-incorrect file sizes.

  mkdir --parents -Z now correctly sets the context for the last component,
  even if the parent directory exists and has a different default context.
  [bug introduced with the -Z restorecon functionality in coreutils-8.22]
