@@ -29,6 +29,8 @@ GNU coreutils NEWS                                    -*- outline -*-
   upon detection of a directory cycle.
   [issue introduced in coreutils-8.20]
 
+  ls -w0 is now interpreted as no limit on the length of the outputted line.
+
 
 * Noteworthy changes in release 8.24 (2015-07-03) [stable]
 
